# house_reading

./: README.md  index.html  index.js
Data/: Data_encode.py  Type0_2020.csv  Type0_2021.csv  Type0_2022.csv  Type0_2023.csv  Type0_2024.csv  Type1_2020.csv  Type1_2021.csv  Type1_2022.csv  Type1_2023.csv  Type1_2024.csv  Type2_2020.csv  Type2_2021.csv  Type2_2022.csv  Type2_2023.csv  Type2_2024.csv  Type3_2020.csv  Type3_2021.csv  Type3_2022.csv  Type3_2023.csv  Type3_2024.csv
backend/: alembic.ini  makefile  pyproject.toml
backend/src/: database.py  main.py  models.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 58bb0a1c24e0_init_migration.py  7fcb6dbf2e34_init_migration.py  988987eef456_broker_phone_added.py
backend/src/constant/: __init__.py  router.py
backend/src/router/: __init__.py
backend/src/router/v1/: __init__.py
backend/src/router/v1/houses/: ChangeRate_SDMG_Apt.csv  crud.py  router.py  schema.py
backend/src/router/v1/users/: router.py  schema.py
crawler/: Temp.csv  pyproject.toml
crawler/crawler/: APICall.py  RateCalculate.ipynb  RateParse.ipynb  stat_analyze.ipynb
crawler/crawler/Data/: Apt_2010.csv  Apt_2020.csv  Offi_2010.csv  Offi_2020.csv  RH_2010.csv  RH_2020.csv  SH_2010.csv  SH_2020.csv  tmp.csv
crawler/crawler/Data/raws/: Apt_2010_raw.csv  Apt_2020_raw.csv  ChangeRate_raw.csv  Offi_2010_raw.csv  Offi_2020_raw.csv  RH_2010_raw.csv  RH_2020_raw.csv  SH_2010_raw.csv  SH_2020_raw.csv
frontend/: house.html  house2(0303, 백엔드 연결 O).html  index(0126).js  index(0130).js  index(0202).js  index(0206).js  index.css  (+2 more)
(+19 files in other folders)
