[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jiho7407 <mmm7407@yonsei.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.14.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
